[tool.poetry]
name = "vnm_adm"
version = "0.1.0"
description = "A short package for quick list, dict of Vietnam administation layers"
authors = ["Tran Long Chau <chau.tran@tuni.fi>"]
license = "CC BY 4.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
